fix: solving the error of the mobile menu not overlapping other content

--- a/frontend/src/pages/root/index.module.css
+++ b/frontend/src/pages/root/index.module.css
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: center;
     margin: 0 12.5%;
+    padding-top: 10vh;
 }
 
 .RootMain .RootContent {
